// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFill props exists 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create Icon element. 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create fillGlyphMap 1`] = `
{
  "account-book": 59905,
  "alert": 59906,
  "alipay-circle": 59907,
  "alipay-square": 59908,
  "aliwangwang": 59909,
  "amazon-circle": 59910,
  "amazon-square": 59911,
  "android": 59912,
  "api": 59913,
  "apple": 59914,
  "appstore": 59915,
  "audio": 59916,
  "backward": 59917,
  "bank": 59918,
  "behance-circle": 59919,
  "behance-square": 59920,
  "bell": 59921,
  "bilibili": 59922,
  "book": 59923,
  "box-plot": 59924,
  "bug": 59925,
  "build": 59926,
  "bulb": 59927,
  "calculator": 59928,
  "calendar": 59929,
  "camera": 59930,
  "car": 59931,
  "caret-down": 59932,
  "caret-left": 59933,
  "caret-right": 59934,
  "caret-up": 59935,
  "carry-out": 59936,
  "check-circle": 59937,
  "check-square": 59938,
  "chrome": 59939,
  "ci-circle": 59940,
  "clock-circle": 59941,
  "close-circle": 59942,
  "close-square": 59943,
  "cloud": 59944,
  "code": 59947,
  "code-sandbox-circle": 59945,
  "code-sandbox-square": 59946,
  "codepen-circle": 59948,
  "codepen-square": 59949,
  "compass": 59950,
  "contacts": 59951,
  "container": 59952,
  "control": 59953,
  "copy": 59954,
  "copyright-circle": 59955,
  "credit-card": 59956,
  "crown": 59957,
  "customer-service": 59958,
  "dashboard": 59959,
  "database": 59960,
  "delete": 59961,
  "diff": 59962,
  "dingtalk-circle": 59963,
  "dingtalk-square": 59964,
  "discord": 59965,
  "dislike": 59966,
  "dollar-circle": 59967,
  "down-circle": 59968,
  "down-square": 59969,
  "dribbble-circle": 59970,
  "dribbble-square": 59971,
  "dropbox-circle": 59972,
  "dropbox-square": 59973,
  "edit": 59974,
  "environment": 59975,
  "euro-circle": 59976,
  "exclamation-circle": 59977,
  "experiment": 59978,
  "eye": 59980,
  "eye-invisible": 59979,
  "facebook": 59981,
  "fast-backward": 59982,
  "fast-forward": 59983,
  "file": 59995,
  "file-add": 59984,
  "file-excel": 59985,
  "file-exclamation": 59986,
  "file-image": 59987,
  "file-markdown": 59988,
  "file-pdf": 59989,
  "file-ppt": 59990,
  "file-text": 59991,
  "file-unknown": 59992,
  "file-word": 59993,
  "file-zip": 59994,
  "filter": 59996,
  "fire": 59997,
  "flag": 59998,
  "folder": 60001,
  "folder-add": 59999,
  "folder-open": 60000,
  "format-painter": 60002,
  "forward": 60003,
  "frown": 60004,
  "fund": 60005,
  "funnel-plot": 60006,
  "gift": 60007,
  "github": 60008,
  "gitlab": 60009,
  "gold": 60010,
  "golden": 60011,
  "google-circle": 60012,
  "google-plus-circle": 60013,
  "google-plus-square": 60014,
  "google-square": 60015,
  "hdd": 60016,
  "heart": 60017,
  "highlight": 60018,
  "home": 60019,
  "hourglass": 60020,
  "html5": 60021,
  "idcard": 60022,
  "ie-circle": 60023,
  "ie-square": 60024,
  "info-circle": 60025,
  "instagram": 60026,
  "insurance": 60027,
  "interaction": 60028,
  "layout": 60029,
  "left-circle": 60030,
  "left-square": 60031,
  "like": 60032,
  "linkedin": 60033,
  "lock": 60034,
  "mac-command": 60035,
  "mail": 60036,
  "medicine-box": 60037,
  "medium-circle": 60038,
  "medium-square": 60039,
  "meh": 60040,
  "merge": 60041,
  "message": 60042,
  "minus-circle": 60043,
  "minus-square": 60044,
  "mobile": 60045,
  "money-collect": 60046,
  "moon": 60047,
  "muted": 60048,
  "notification": 60049,
  "open-a-i": 60050,
  "pause-circle": 60051,
  "pay-circle": 60052,
  "phone": 60053,
  "picture": 60054,
  "pie-chart": 60055,
  "pinterest": 60056,
  "play-circle": 60057,
  "play-square": 60058,
  "plus-circle": 60059,
  "plus-square": 60060,
  "pound-circle": 60061,
  "printer": 60062,
  "product": 60063,
  "profile": 60064,
  "project": 60065,
  "property-safety": 60066,
  "pushpin": 60067,
  "qq-circle": 60068,
  "qq-square": 60069,
  "question-circle": 60070,
  "read": 60071,
  "reconciliation": 60072,
  "red-envelope": 60073,
  "reddit-circle": 60074,
  "reddit-square": 60075,
  "rest": 60076,
  "right-circle": 60077,
  "right-square": 60078,
  "robot": 60079,
  "rocket": 60080,
  "safety-certificate": 60081,
  "save": 60082,
  "schedule": 60083,
  "security-scan": 60084,
  "setting": 60085,
  "shop": 60086,
  "shopping": 60087,
  "signal": 60088,
  "signature": 60089,
  "sketch-circle": 60090,
  "sketch-square": 60091,
  "skin": 60092,
  "skype": 60093,
  "slack-circle": 60094,
  "slack-square": 60095,
  "sliders": 60096,
  "smile": 60097,
  "snippets": 60098,
  "sound": 60099,
  "spotify": 60100,
  "star": 60101,
  "step-backward": 60102,
  "step-forward": 60103,
  "stop": 60104,
  "sun": 60105,
  "switcher": 60106,
  "tablet": 60107,
  "tag": 60108,
  "tags": 60109,
  "taobao-circle": 60110,
  "taobao-square": 60111,
  "thunderbolt": 60112,
  "tik-tok": 60113,
  "tool": 60114,
  "trademark-circle": 60115,
  "trophy": 60116,
  "truck": 60117,
  "twitch": 60118,
  "twitter-circle": 60119,
  "twitter-square": 60120,
  "unlock": 60121,
  "up-circle": 60122,
  "up-square": 60123,
  "usb": 60124,
  "video-camera": 60125,
  "wallet": 60126,
  "warning": 60127,
  "wechat": 60129,
  "wechat-work": 60128,
  "weibo-circle": 60130,
  "weibo-square": 60131,
  "windows": 60132,
  "x": 60133,
  "yahoo": 60134,
  "youtube": 60135,
  "yuque": 60136,
  "zhihu-circle": 60137,
  "zhihu-square": 60138,
}
`;
